Fix page-meta spacing to not hide user profile link

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -129,7 +129,10 @@ hr {
 
 .page-meta {
     font-size: .8rem;
-    margin: -2rem 0 3rem;
+    margin: 2rem 0 3rem;
+    h1 + & {
+        margin-top: -2rem;
+    }
     a {
         margin: 0 1rem 0 0;
         padding-bottom: .1rem;
